api_versioned_docs/version-12.0.5/avalonia/media/glyphtypeface.mdx
---
title: 'GlyphTypeface'
hide_title: true
slug: '/avalonia/media/glyphtypeface'
uid: 'Avalonia.Media.GlyphTypeface'
commentId: 'T:Avalonia.Media.GlyphTypeface'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Base'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Media'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">GlyphTypeface Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Media</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Base</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia</code>
</div>
</div>

<div className="apiref-page__lead">

Represents a glyph typeface, providing access to font metrics, glyph mappings, and other font-related
properties.

</div>

<div className="apiref-page__signature">

```csharp
public class GlyphTypeface
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> GlyphTypeface
</div>
</div>

## Remarks

The [Avalonia.Media.GlyphTypeface](xref:Avalonia.Media.GlyphTypeface) class is used to encapsulate font data, including metrics,
character-to-glyph mappings, and supported OpenType features. It supports platform-specific typefaces and
applies optional font simulations such as bold or oblique. This class is typically used in text rendering and
shaping scenarios.

## Constructors

| Name | Description |
| --- | --- |
| [GlyphTypeface](#uid-0ace250ea7) | Initializes a new instance of the [Avalonia.Media.GlyphTypeface](xref:Avalonia.Media.GlyphTypeface) class with the specified platform typeface and font simulations. |

<section className="apiref-page__member-entry">

<span id="uid-0ace250ea7"></span>

### GlyphTypeface Constructor

Initializes a new instance of the [Avalonia.Media.GlyphTypeface](xref:Avalonia.Media.GlyphTypeface) class with the specified platform typeface and
font simulations.

```csharp
public GlyphTypeface(Avalonia.Media.IPlatformTypeface typeface, Avalonia.Media.FontSimulations fontSimulations)
```

#### Parameters

`typeface` [Avalonia.Media.IPlatformTypeface](xref:Avalonia.Media.IPlatformTypeface)

The platform-specific typeface to be used for this [Avalonia.Media.GlyphTypeface](xref:Avalonia.Media.GlyphTypeface) instance. This parameter
cannot be `null`.


`fontSimulations` [Avalonia.Media.FontSimulations](xref:Avalonia.Media.FontSimulations)

The font simulations to apply, such as bold or oblique. The default is [Avalonia.Media.FontSimulations.None](xref:Avalonia.Media.FontSimulations.None).


#### Remarks

This constructor initializes the glyph typeface by loading various font tables,
including OS/2, CMAP, and metrics tables, to calculate font metrics and other properties. It also determines
font characteristics such as weight, style, stretch, and family names based on the provided typeface and
font simulations.

#### Exceptions

- [Thrown if required font tables (e.g., 'maxp') cannot be loaded.](xref:System.InvalidOperationException)

</section>

## Methods

| Name | Description |
| --- | --- |
| [DeclaresLanguageCoverage](#uid-e6ee88bf43) | Determines whether this font self-declares coverage for the supplied culture via its OpenType `meta` table `dlng` or `slng` tag list. |
| [Dispose](#uid-611d5d5c3c) | No summary available. |
| [SupportsScript](#uid-bfbc66e215) | Determines whether the font advertises support for the supplied Unicode script. |
| [TryGetGlyphMetrics (2 overloads)](#uid-224187e3e5) | No summary available. |
| [TryGetHorizontalGlyphAdvance](#uid-327caa7a57) | No summary available. |
| [TryGetHorizontalGlyphAdvances](#uid-fff209abba) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-e6ee88bf43"></span>

### DeclaresLanguageCoverage Method

Determines whether this font self-declares coverage for the supplied culture via its
OpenType `meta` table `dlng` or `slng` tag list.

```csharp
public bool DeclaresLanguageCoverage(System.Globalization.CultureInfo culture)
```

#### Parameters

`culture` System.Globalization.CultureInfo

The culture to check. If `null` the method returns `false`.


#### Returns

bool

`true` when one of the declared language tags is a BCP-47 prefix of the culture's
[System.Globalization.CultureInfo.Name](xref:System.Globalization.CultureInfo.Name) (or vice versa, when the font specifies a narrower tag).


#### Remarks

The match is case-insensitive and BCP-47-aware: the comparison succeeds when one tag is
a prefix of the other up to a subtag boundary (e.g. `"ja"` matches `"ja-JP"`,
and `"zh-Hans"` matches `"zh-Hans-CN"`). Returns `false` when the font
declares no design or supported languages.

</section>

<section className="apiref-page__member-entry">

<span id="uid-611d5d5c3c"></span>

### Dispose Method

```csharp
public void Dispose()
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-bfbc66e215"></span>

### SupportsScript Method

Determines whether the font advertises support for the supplied Unicode script.

```csharp
public bool SupportsScript(Avalonia.Media.TextFormatting.Unicode.Script script)
```

#### Parameters

`script` [Avalonia.Media.TextFormatting.Unicode.Script](xref:Avalonia.Media.TextFormatting.Unicode.Script)


#### Returns

bool


#### Remarks

When the font ships an OS/2 table the answer is taken from the OS/2 ulUnicodeRange bitfield
(the font's own self-declaration of script coverage). When OS/2 is absent or the bit is unset,
this falls back to probing the cmap with a representative codepoint for the script. Returns
`true` for scripts that don't have a meaningful per-script signal (for example
[Avalonia.Media.TextFormatting.Unicode.Script.Common](xref:Avalonia.Media.TextFormatting.Unicode.Script.Common) or [Avalonia.Media.TextFormatting.Unicode.Script.Unknown](xref:Avalonia.Media.TextFormatting.Unicode.Script.Unknown)).

</section>

<span id="uid-224187e3e5"></span>

### TryGetGlyphMetrics overloads

<section className="apiref-page__member-entry">

<span id="uid-2a0770d4e8"></span>

#### TryGetGlyphMetrics Method

```csharp
public bool TryGetGlyphMetrics(ReadOnlySpan<ushort> glyphIds, Span<Avalonia.Media.GlyphMetrics> metrics)
```

##### Parameters

`glyphIds` ReadOnlySpan&lt;ushort&gt;


`metrics` Span&lt;[Avalonia.Media.GlyphMetrics](xref:Avalonia.Media.GlyphMetrics)&gt;


##### Returns

bool


</section>

<section className="apiref-page__member-entry">

<span id="uid-18152dfbd1"></span>

#### TryGetGlyphMetrics Method

```csharp
public bool TryGetGlyphMetrics(ushort glyph, Avalonia.Media.GlyphMetrics& metrics)
```

##### Parameters

`glyph` ushort


`metrics` [Avalonia.Media.GlyphMetrics](xref:Avalonia.Media.GlyphMetrics)&amp;


##### Returns

bool


</section>

<section className="apiref-page__member-entry">

<span id="uid-327caa7a57"></span>

### TryGetHorizontalGlyphAdvance Method

```csharp
public bool TryGetHorizontalGlyphAdvance(ushort glyphId, ushort& advance)
```

#### Parameters

`glyphId` ushort


`advance` ushort&amp;


#### Returns

bool


</section>

<section className="apiref-page__member-entry">

<span id="uid-fff209abba"></span>

### TryGetHorizontalGlyphAdvances Method

```csharp
public bool TryGetHorizontalGlyphAdvances(ReadOnlySpan<ushort> glyphIds, Span<ushort> advances)
```

#### Parameters

`glyphIds` ReadOnlySpan&lt;ushort&gt;


`advances` Span&lt;ushort&gt;


#### Returns

bool


</section>

## Properties

| Name | Description |
| --- | --- |
| [CharacterToGlyphMap](#uid-820bb58c1b) | Gets a read-only mapping of Unicode character codes to glyph indices for the font. |
| [CodePageCoverage](#uid-13288467e7) | Gets the codepage coverage advertised by the font via the OpenType `OS/2.ulCodePageRange1/2` bitfields. |
| [DesignLanguages](#uid-891390f33f) | Gets the BCP-47 language tags the font's designer declared as the design target for the font (the `dlng` data tag in the OpenType `meta` table). |
| [FaceNames](#uid-d5bea81105) | Gets a read-only mapping of culture-specific face names. |
| [FamilyName](#uid-7117edd23d) | Gets the family name of the font. |
| [FamilyNames](#uid-c2fc7a9ce5) | Gets a read-only mapping of localized culture-specific family names. |
| [FontSimulations](#uid-d4b3d5b8f6) | Gets the font simulation settings applied to the [Avalonia.Media.GlyphTypeface](xref:Avalonia.Media.GlyphTypeface). |
| [GlyphCount](#uid-f8b29671db) | Gets the number of glyphs held by this font. |
| [Metrics](#uid-49ad964e00) | Gets the font metrics associated with this font. |
| [PlatformTypeface](#uid-239ceb6ee3) | Gets the platform-specific typeface associated with this font. |
| [Stretch](#uid-bef0dfc38f) | Gets the font stretch. |
| [Style](#uid-d762ed5152) | Gets the font style. |
| [SupportedFeatures](#uid-61839489bf) | Gets the list of OpenType feature tags supported by the font. |
| [SupportedLanguages](#uid-039c8f5835) | Gets the BCP-47 language tags the font advertises as supported (the `slng` data tag in the OpenType `meta` table). |
| [SupportedUnicodeRange](#uid-c0034604d7) | Gets the union of Unicode codepoint ranges covered by the font's character map. |
| [TextShaperTypeface](#uid-df45934655) | Gets the typeface information used by the text shaper for this font. |
| [TypographicFamilyName](#uid-5249100e36) | Gets the typographic family name of the font. |
| [Weight](#uid-076de7204b) | Gets the font weight. |

<section className="apiref-page__member-entry">

<span id="uid-820bb58c1b"></span>

### CharacterToGlyphMap Property

Gets a read-only mapping of Unicode character codes to glyph indices for the font.

```csharp
public Avalonia.Media.Fonts.Tables.Cmap.CharacterToGlyphMap CharacterToGlyphMap { get; set; }
```

#### Remarks

This dictionary provides the correspondence between Unicode code points and the
glyphs defined in the font. The mapping can be used to look up the glyph index for a given character when
rendering or processing text. The set of mapped characters depends on the font's supported character
set.

</section>

<section className="apiref-page__member-entry">

<span id="uid-13288467e7"></span>

### CodePageCoverage Property

Gets the codepage coverage advertised by the font via the OpenType
`OS/2.ulCodePageRange1/2` bitfields.

```csharp
public Avalonia.Media.Fonts.FontCodePageCoverage CodePageCoverage { get; set; }
```

#### Remarks

Returns [Avalonia.Media.Fonts.FontCodePageCoverage.None](xref:Avalonia.Media.Fonts.FontCodePageCoverage.None) when the font does not ship an OS/2 table
or only supplies an OS/2 version &lt; 1 (where the codepage range fields are not present).

</section>

<section className="apiref-page__member-entry">

<span id="uid-891390f33f"></span>

### DesignLanguages Property

Gets the BCP-47 language tags the font's designer declared as the design target for the
font (the `dlng` data tag in the OpenType `meta` table).

```csharp
public ReadOnlySpan<string> DesignLanguages { get; set; }
```

#### Remarks

Returns an empty span when the font does not ship a `meta` table or omits the
`dlng` data tag.

</section>

<section className="apiref-page__member-entry">

<span id="uid-d5bea81105"></span>

### FaceNames Property

Gets a read-only mapping of culture-specific face names.

```csharp
public System.Collections.Generic.IReadOnlyDictionary<System.Globalization.CultureInfo, string> FaceNames { get; set; }
```

#### Remarks

Each entry in the dictionary maps a [System.Globalization.CultureInfo](xref:System.Globalization.CultureInfo) to
the corresponding localized face name. The dictionary is empty if no face names are defined.

</section>

<section className="apiref-page__member-entry">

<span id="uid-7117edd23d"></span>

### FamilyName Property

Gets the family name of the font.

```csharp
public string FamilyName { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-c2fc7a9ce5"></span>

### FamilyNames Property

Gets a read-only mapping of localized culture-specific family names.

```csharp
public System.Collections.Generic.IReadOnlyDictionary<System.Globalization.CultureInfo, string> FamilyNames { get; set; }
```

#### Remarks

The dictionary contains entries for each supported culture, where the key is a [System.Globalization.CultureInfo](xref:System.Globalization.CultureInfo) representing the culture, and the value is the corresponding localized family name. The
dictionary may be empty if no family names are available.

</section>

<section className="apiref-page__member-entry">

<span id="uid-d4b3d5b8f6"></span>

### FontSimulations Property

Gets the font simulation settings applied to the [Avalonia.Media.GlyphTypeface](xref:Avalonia.Media.GlyphTypeface).

```csharp
public Avalonia.Media.FontSimulations FontSimulations { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-f8b29671db"></span>

### GlyphCount Property

Gets the number of glyphs held by this font.

```csharp
public int GlyphCount { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-49ad964e00"></span>

### Metrics Property

Gets the font metrics associated with this font.

```csharp
public Avalonia.Media.FontMetrics Metrics { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-239ceb6ee3"></span>

### PlatformTypeface Property

Gets the platform-specific typeface associated with this font.

```csharp
public Avalonia.Media.IPlatformTypeface PlatformTypeface { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-bef0dfc38f"></span>

### Stretch Property

Gets the font stretch.

```csharp
public Avalonia.Media.FontStretch Stretch { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-d762ed5152"></span>

### Style Property

Gets the font style.

```csharp
public Avalonia.Media.FontStyle Style { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-61839489bf"></span>

### SupportedFeatures Property

Gets the list of OpenType feature tags supported by the font.

```csharp
public System.Collections.Generic.IReadOnlyList<Avalonia.Media.Fonts.OpenTypeTag> SupportedFeatures { get; set; }
```

#### Remarks

The returned list reflects the features available in the underlying font and is
read-only. The order of features in the list is not guaranteed. This property does not return null; if the
font does not support any features, the list will be empty.

</section>

<section className="apiref-page__member-entry">

<span id="uid-039c8f5835"></span>

### SupportedLanguages Property

Gets the BCP-47 language tags the font advertises as supported (the `slng` data tag
in the OpenType `meta` table).

```csharp
public ReadOnlySpan<string> SupportedLanguages { get; set; }
```

#### Remarks

Returns an empty span when the font does not ship a `meta` table or omits the
`slng` data tag.

</section>

<section className="apiref-page__member-entry">

<span id="uid-c0034604d7"></span>

### SupportedUnicodeRange Property

Gets the union of Unicode codepoint ranges covered by the font's character map.

```csharp
public Avalonia.Media.UnicodeRange SupportedUnicodeRange { get; set; }
```

#### Remarks

The returned [Avalonia.Media.UnicodeRange](xref:Avalonia.Media.UnicodeRange) is derived from the cmap table and represents every
codepoint for which the font defines a glyph. It is computed lazily on first access and cached
for the lifetime of the [Avalonia.Media.GlyphTypeface](xref:Avalonia.Media.GlyphTypeface). Prefer this property over enumerating
[Avalonia.Media.GlyphTypeface.CharacterToGlyphMap](xref:Avalonia.Media.GlyphTypeface.CharacterToGlyphMap) when only coverage information (not glyph IDs) is required.

</section>

<section className="apiref-page__member-entry">

<span id="uid-df45934655"></span>

### TextShaperTypeface Property

Gets the typeface information used by the text shaper for this font.

```csharp
public Avalonia.Media.ITextShaperTypeface TextShaperTypeface { get; set; }
```

#### Remarks

The returned typeface is created on demand and cached for subsequent accesses. This
property is typically used by text rendering components that require low-level font shaping
details.

</section>

<section className="apiref-page__member-entry">

<span id="uid-5249100e36"></span>

### TypographicFamilyName Property

Gets the typographic family name of the font.

```csharp
public string TypographicFamilyName { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-076de7204b"></span>

### Weight Property

Gets the font weight.

```csharp
public Avalonia.Media.FontWeight Weight { get; set; }
```

</section>

</ApiRefPage>

